--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -51,10 +51,13 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="active" href="{% url 'the_user:register' %}">register</a></li>
+          {% if request.user.is_authenticated %}
           <li><a href="{% url 'trainee:list' %}">Trainers</a></li>
           <li><a href="{% url 'trainee:insert' %}">insert</a></li>
-          
+          {% else %}
+          <li><a class="active" href="{% url 'the_user:register' %}">register</a></li>
+
+          {% endif %}
 
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
